...
        self.view.addSubview(topView)
        topView.navigationDelegate = topViewDelegate
        topView.uiDelegate = topViewDelegate
        
        var myRequest = URLRequest(url: programUrl!)
        if UIApplication.shared.canOpenURL(URL(string:"whatsapp://app")!) {
            myRequest.addValue("native", forHTTPHeaderField: "whatapps_available")
        }
        if UIApplication.shared.canOpenURL(URL(string:"fbauth2://")!){
            myRequest.addValue("native", forHTTPHeaderField: "facebook_available")
        }
        topView.load(myRequest)
    }
...
