...
    }
    
    @objc func addWish(_ sender: UIButton) {
        let wishPicker = UIAlertController(title: "Pick your wish", message: "Santa has following items", preferredStyle: .actionSheet)
        wishPicker.popoverPresentationController?.sourceView = self.view // so that iPads won't crash
        
        wishPicker.addAction(UIAlertAction(title: NSLocalizedString("Playstation", comment: "Great Education tool"), style: .default,  handler: { _ in
            self.addWishToShareable(item: "Playstation")
        }))
        
        wishPicker.addAction(UIAlertAction(title: NSLocalizedString("XBox", comment: "Great Education tool"), style: .default,  handler: { _ in
            self.addWishToShareable(item: "XBox")
        }))
...
